# ncnn_ssd

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  build_vs2017.bat  ncnn_ssd.sln
cmake/: libncnn.cmake
config/: VulkanSDK_1.1.92.1.props  ncnn_release.props  opencv3.props
demo/: main.cpp
models/ssd/: ssd_vgg300.param  ssd_vgg300_sim.onnx
ncnn_ssd/: BaseDetector.cpp  BaseDetector.h  CMakeLists.txt  PriorBox.cpp  PriorBox.h  SSDDetector.cpp  SSDDetector.h  box_utils.cpp  box_utils.h  common.h  main.cpp  ncnn_ssd.vcxproj  ncnn_ssd.vcxproj.filters  ssd_vgg300.id.h
